@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-04-25T16:25:48Z",
+  "timestamp" : "2022-04-26T01:43:50Z",
   "count_outdated" : 1779,
   "uniques_outdated" : 335,
-  "count" : 1818,
-  "uniques" : 358,
+  "count" : 1819,
+  "uniques" : 359,
   "clones" : [
     {
       "timestamp": "2022-04-13T00:00:00Z",
@@ -39,6 +39,13 @@
       "count_minmax": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2022-04-25T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
