@@ -1,5 +1,5 @@
 {
-  "count": 39,
+  "count": 40,
   "uniques": 15,
   "clones": [
     {
@@ -24,6 +24,11 @@
     },
     {
       "timestamp": "2022-04-22T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-04-25T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
