@@ -1,3 +1,9 @@
+2022-04-26T01:43:50Z:
+* notice: last 14d: all unq: 40 15
+* notice: prev accum: outdated-all outdated-unq / all unq: 1779 335 / 1818 358
+* notice: next accum: outdated-all outdated-unq / all unq: 1779 335 / 1819 359
+* notice: prev json diff // prev day diff: unq all: +1 +1 / -0 -0 // +1 +1 / -0 -0
+
 2022-04-25T16:25:48Z:
 * notice: last 14d: all unq: 39 15
 * notice: prev accum: outdated-all outdated-unq / all unq: 1778 334 / 1818 358
